--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
   },
   "homepage": "https://github.com/sa2taka/kairi#readme",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --minify --outfile=bin/index.js",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --minify --outfile=bin/index",
+    "dev": "ts-node --require dotenv/config ./src/index.ts",
     "lint": "npm lint:type && npm:eslint",
     "lint:type": "tsc --noEmit src/**/*.ts",
     "lint:eslint": "eslint src/**/*.ts",
     "test": "jest"
   },
   "dependencies": {
+    "commander": "^10.0.1",
+    "glob": "^10.2.5",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.1",
     "@types/mock-fs": "^4.13.1",
     "@types/node": "^20.1.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "dotenv": "^16.0.3",
     "esbuild": "0.17.19",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.40.0",
@@ -40,6 +45,7 @@
     "jest": "^29.5.0",
     "mock-fs": "^5.2.0",
     "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
     "vitest": "^0.31.0"
   }
 }
