--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "commander": "^10.0.1",
     "glob": "^10.2.5",
+    "openai": "^3.2.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
